--- a/partials/selfie.html
+++ b/partials/selfie.html
@@ -5,7 +5,7 @@
         <md-content class="md-padding">
           <ul class="opcion-list">
             <li>
-              <a ng-click="go('/selfie/el-pitbull')">
+              <a ng-click="go('/selfie/alexis')">
                 <img src="resources/img/pharse_alexis.svg" alt="" />
               </a>
             </li>
@@ -16,7 +16,7 @@
         <md-content class="md-padding">
           <ul class="opcion-list">
             <li>
-              <a ng-click="go('/selfie/el-pitbull')">
+              <a ng-click="go('/selfie/el-rey')">
                 <img src="resources/img/pharse_vidal.svg" alt="" />
               </a>
             </li>
